vaal-sys/vaal.h

/**
 * @struct NNContext
 *
 * DeepViewRT Context.  Refer to the DeepviewRT User Manual for details.
 */
typedef struct nn_context NNContext;
/**
 * @struct NNTensor
 *
 * DeepViewRT Tensor objects.  Refer to the DeepViewRT User Manual for details.
 */
typedef struct nn_tensor NNTensor;
/**
 * @struct NNModel
 *
 * DeepviewRT Model (RTM).  Refer to the DeepViewRT User Manual for details.
 */
typedef void NNModel;
/**
 * Enumeration of all errors provided by VAAL.  Most functions will return a
 * VAALError with VAAL_SUCCESS being zero. A common usage pattern for client
 * code is to check for err using `if (err) ...` as any error condition will
 * return non-zero.
 */
typedef enum {
    /**
     * Successfull operation, no error.
     */
    VAAL_SUCCESS = 0,
    /**
     * Internal error without a specific error code, catch-all error.
     */
    VAAL_ERROR_INTERNAL,
    /**
     * The provided handle is invalid.  This error is typically used by NNEngine
     * when interfacing with another API
     */
    VAAL_ERROR_INVALID_HANDLE,
    /**
     * Out of memory error, returned if a call to malloc returns NULL or similar
     * error.
     */
    VAAL_ERROR_OUT_OF_MEMORY,
    /**
     * Out of resources errors are similar to out of memory though sometimes
     * treated separately by underlying plugins.
     */
    VAAL_ERROR_OUT_OF_RESOURCES,
    /**
     * Signals an API has not been implemented..
     */
    VAAL_ERROR_NOT_IMPLEMENTED,
    /**
     * A required parameter was missing or NULL or simply invalid.
     */
    VAAL_ERROR_INVALID_PARAMETER,
    /**
     * When attempting to run an operation where the input/output tensors are
     * of different types and the operation does not support automatic type
     * conversions.
     */
    VAAL_ERROR_TYPE_MISMATCH,
    /**
     * When attempting to run an operation and the input/output tensors have
     * invalid or unsupported shape combinations.  Some operations require the
     * shapes to be the same while others, such as arithmetic broadcasting
     * operations, will support various shape combinations but if the provided
     * pairs are invalid then the shape mismatch is returned.
     */
    VAAL_ERROR_SHAPE_MISMATCH,
    /**
     * The tensor's shape is invalid for the given operation.  It differs from
     * the shape mismatch in that the shape is invalid on its own and not
     * relative to another related tensor.  An example would be a shape with
     * more than one -1 dimension.
     */
    VAAL_ERROR_INVALID_SHAPE,
    /**
     * The requested ordering was invalid.
     */
    VAAL_ERROR_INVALID_ORDER,
    /**
     * The requested axis for an operation was invalid or unsupported.
     */
    VAAL_ERROR_INVALID_AXIS,
    /**
     * A required resource was missing or the reference invalid.
     */
    VAAL_ERROR_MISSING_RESOURCE,
    /**
     * The requested engine is invalid.
     */
    VAAL_ERROR_INVALID_ENGINE,
    /**
     * The tensor has no data or the data is not currently accessible.
     */
    VAAL_ERROR_TENSOR_NO_DATA,
    /**
     * The internal kernel or subroutine required to complete an operation using
     * the engine plugin was missing.  An example would be OpenCL or OpenVX
     * operation where the kernel implementation cannot be located.
     */
    VAAL_ERROR_KERNEL_MISSING,
    /**
     * The operation does not support the tensor's type.
     */
    VAAL_ERROR_TENSOR_TYPE_UNSUPPORTED,
    /**
     * For operations which can operate on an array of inputs, the provided list
     * of inputs was too large.
     */
    VAAL_ERROR_TOO_MANY_INPUTS,
    /**
     * A system error occured when interfacing with an operating system
     * function.  On some systems errno might be updated with the underlying
     * error code.
     */
    VAAL_ERROR_SYSTEM_ERROR,
    /**
     * When working with a model a reference was made to a layer which did not
     * exist.
     */
    VAAL_ERROR_INVALID_LAYER,
    /**
     * The model is invalid or corrupted.
     */
    VAAL_ERROR_MODEL_INVALID,
    /**
     * An operation referenced a model but the model was not provided.
     */
    VAAL_ERROR_MODEL_MISSING,
    /**
     * The string was too large.
     */
    VAAL_ERROR_STRING_TOO_LARGE,
    /**
     * The quantization parameters are invalid.
     */
    VAAL_ERROR_INVALID_QUANT,
    /**
     * Failed to generate graph representation of model.
     */
    VAAL_ERROR_MODEL_GRAPH_FAILED,
    /**
     * Failed to verify graph generateed from model.
     */
    VAAL_ERROR_GRAPH_VERIFY_FAILED,
    /**
     * Unknown decoder was provided or failed to detect decoder.
     */
    VAAL_ERROR_UNKNOWN_DECODER = 0x10000,
    /**
     * Attempted to write to read-only parameter.
     */
    VAAL_ERROR_PARAMETER_READ_ONLY,
    /**
     * Lookup of named parameter was not found.
     */
    VAAL_ERROR_PARAMETER_NOT_FOUND,
    /**
     * Attempted an operation which is unsupported on the current platform.
     */
    VAAL_ERROR_PLATFORM_UNSUPPORTED,
    /**
     * Library has not been initialized for use, this should happen
     * automatically but can be done manually using vaal_init().
     */
    VAAL_ERROR_LIBRARY_UNINITIALIZED,
} VAALError;
/**
 * @struct VAALContext
 *
 * Context object for VAAL to manage internal model data structures.  The
 * VAALContext manages the DeepViewRT NNContext as well as parameters related
 * to model post-processing.
 *
 * Models typically require further post-processing before the outputs are
 * ready to be interpreted.  What post-processing is required varies greatly
 * between various model architectures. A common post-processing step is the
 * decoder which is responsible for translating an internal model representation
 * into one which represents the problem space.
 *
 * For detection models the post-processing includes the box decoding step which
 * can either be integrated into the model or run as a separate step using the
 * model's outputs followed by sorting and non-maximum supression "NMS" which is
 * tasked with cleaning the bounding box output.
 *
 * For classification models the post-processing is typically implemented by
 * finding within an output vector the index of the maximum value "argmax" where
 * the index has meaning. For example, the index into the labels with which the
 * classifier was trained. The value itself can also be interpreted as a weak
 * confidence metric in cases where a softmax or sigmoid was applied to the
 * vector.
 */
typedef struct vaal_context VAALContext;
/**
 * Access the DeepViewRT NNTensor objects for the model's output.  The function
 * supports multiple outputs which are selected using the index parameter.  To
 * confirm the number of outputs you may use the @ref vaal_output_count()
 * function and to read the names of the outputs as defined in the model file
 * you may use @ref vaal_output_name().
 *
 * An output will fail to be found if there's no model loaded, the context is
 * not valid, or the index is out of range.  It is also possible the model has
 * no outputs identified.  In these cases the function will return NULL.
 *
 * @param context The VAALContext which owns the model from which we want to
 * retrieve output tensors.
 * @param index The output layer index.
 *
 * @return NNTensor or NULL if the output cannot be found, see notes.
 *
 * @since 1.1
 */
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
NNTensor*
vaal_output_tensor(VAALContext* context, int index);
/**
 * Returns the number of tensor outputs defined by the current model.  If the
 * context is invalid, has no model loaded, or the model does not identify any
 * outputs then the function will return 0.
 *
 * @param context The VAALContext which owns the model from which we want to
 * count the number of outputs.
 *
 * @return The number of outputs defined by the model.
 *
 * @since 1.1
 */
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
int
vaal_output_count(VAALContext* context);
/**
 * Returns the layer name from the model which corresponds to the output at the
 * provided index.  If the context is invalid, has no model loaded, or the index
 * is out of range then the function will return NULL.
 *
 * @param context The VAALContext which owns the model from which we want to get
 * the output name.
 * @param index the output layer index.
 *
 * @return The name of the layer in the model which owns the output tensor.
 *
 * @since 1.1
 */
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
const char*
vaal_output_name(VAALContext* context, int index);
//////////////////////////////////////////////
//                legacy
//////////////////////////////////////////////

/**
 * The following are low-level box-decoding API provided by VAAL.  Typically a
 * user would be expected to use the @ref vaal_read_boxes function and avoid
 * using the low-level functions directly but they are exposed for cases where
 * the user wishes to control the post-processing directly.
 */

/**
 * CenterNet decoder.
 *
 * @return VAALError
 *
 * @since 1.0
 */
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_postprocessing_centernet(NNTensor* heatmap_tensor,
                              NNTensor* regression_tensor,
                              NNTensor* size_tensor,
                              NNTensor* cache,
                              NNTensor* decode_out);
/**
 * YOLO decoder.
 *
 * @return VAALError
 *
 * @since 1.0
 */
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_postprocessing_centernet_sigmoid(NNTensor* heatmap_tensor,
                                      NNTensor* regression_tensor,
                                      NNTensor* size_tensor,
                                      NNTensor* cache_tensor,
                                      NNTensor* decode_out);
VAAL_API
VAALError
vaal_postprocessing_yolo(NNTensor** feature_tensors,
                         int        input_shape,
                         int        yolo_model_idx,
                         NNTensor*  cache,
                         float      score_threshold,
                         float      iou_threshold,
                         int        max_output_size_per_class,
                         NNTensor*  bbx_out_tensor,
                         NNTensor*  bbx_out_dim_tensor);
VAAL_API
VAALError
vaal_postprocessing_nms(NNTensor* scores_tensor,
                        NNTensor* boxes_tensor,
                        NNTensor* cache_tensor,
                        float     score_threshold,
                        float     iou_threshold,
                        int       max_output_size_per_class,
                        NNTensor* bbx_out_tensor,
                        NNTensor* bbx_out_dim_tensor);
VAAL_API
VAALError
vaal_facedet_decode(NNTensor* priors,
                    NNTensor* loc,
                    NNTensor* iou,
                    NNTensor* conf,
                    NNTensor* scores,
                    NNTensor* boxes);
/**
 * Box NMS.
 *
 * @return VAALError
 *
 * @since 1.0
 */
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_postprocessing_ssd_standard_bbx(NNTensor* score_tensor,
                                     NNTensor* trans,
                                     NNTensor* anchors,
                                     NNTensor* cache,
                                     float     score_threshold,
                                     float     iou_threshold,
                                     int32_t   max_output_size,
                                     NNTensor* bbx_out_tensor,
                                     NNTensor* bbx_out_dim_tensor);
VAAL_API
VAALError
vaal_remap_detection_tensors(NNModel*   mode,
                             NNContext* context,
                             NNTensor** detection_tensors);
VAAL_API
VAALError
vaal_set_class_filter(NNTensor* decode_out, int* class_idx_array, int len);
VAAL_API
VAALError
vaal_set_nms_type(NNTensor* decode_out, int nms_type_in);
VAAL_API
char*
vaal_check_model_string(const int idx);
VAAL_API
void
vaal_set_detection_model_type(NNModel*   model,
                              NNContext* context,
                              int        model_type_id);