vaal-sys/src/ffi.rs

extern "C" {
    #[doc = " Access the DeepViewRT NNTensor objects for the model's output.  The function\n supports multiple outputs which are selected using the index parameter.  To\n confirm the number of outputs you may use the @ref vaal_output_count()\n function and to read the names of the outputs as defined in the model file\n you may use @ref vaal_output_name().\n\n An output will fail to be found if there's no model loaded, the context is\n not valid, or the index is out of range.  It is also possible the model has\n no outputs identified.  In these cases the function will return NULL.\n\n @param context The VAALContext which owns the model from which we want to\n retrieve output tensors.\n @param index The output layer index.\n\n @return NNTensor or NULL if the output cannot be found, see notes.\n\n @since 1.1"]
    pub fn vaal_output_tensor(
        context: *mut VAALContext,
        index: ::std::os::raw::c_int,
    ) -> *mut NNTensor;
}
extern "C" {
    #[doc = " Returns the number of tensor outputs defined by the current model.  If the\n context is invalid, has no model loaded, or the model does not identify any\n outputs then the function will return 0.\n\n @param context The VAALContext which owns the model from which we want to\n count the number of outputs.\n\n @return The number of outputs defined by the model.\n\n @since 1.1"]
    pub fn vaal_output_count(context: *mut VAALContext) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the layer name from the model which corresponds to the output at the\n provided index.  If the context is invalid, has no model loaded, or the index\n is out of range then the function will return NULL.\n\n @param context The VAALContext which owns the model from which we want to get\n the output name.\n @param index the output layer index.\n\n @return The name of the layer in the model which owns the output tensor.\n\n @since 1.1"]
    pub fn vaal_output_name(
        context: *mut VAALContext,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " CenterNet decoder.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_postprocessing_centernet(
        heatmap_tensor: *mut NNTensor,
        regression_tensor: *mut NNTensor,
        size_tensor: *mut NNTensor,
        cache: *mut NNTensor,
        decode_out: *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    #[doc = " YOLO decoder.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_postprocessing_centernet_sigmoid(
        heatmap_tensor: *mut NNTensor,
        regression_tensor: *mut NNTensor,
        size_tensor: *mut NNTensor,
        cache_tensor: *mut NNTensor,
        decode_out: *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_postprocessing_yolo(
        feature_tensors: *mut *mut NNTensor,
        input_shape: ::std::os::raw::c_int,
        yolo_model_idx: ::std::os::raw::c_int,
        cache: *mut NNTensor,
        score_threshold: f32,
        iou_threshold: f32,
        max_output_size_per_class: ::std::os::raw::c_int,
        bbx_out_tensor: *mut NNTensor,
        bbx_out_dim_tensor: *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_postprocessing_nms(
        scores_tensor: *mut NNTensor,
        boxes_tensor: *mut NNTensor,
        cache_tensor: *mut NNTensor,
        score_threshold: f32,
        iou_threshold: f32,
        max_output_size_per_class: ::std::os::raw::c_int,
        bbx_out_tensor: *mut NNTensor,
        bbx_out_dim_tensor: *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_facedet_decode(
        priors: *mut NNTensor,
        loc: *mut NNTensor,
        iou: *mut NNTensor,
        conf: *mut NNTensor,
        scores: *mut NNTensor,
        boxes: *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Box NMS.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_postprocessing_ssd_standard_bbx(
        score_tensor: *mut NNTensor,
        trans: *mut NNTensor,
        anchors: *mut NNTensor,
        cache: *mut NNTensor,
        score_threshold: f32,
        iou_threshold: f32,
        max_output_size: i32,
        bbx_out_tensor: *mut NNTensor,
        bbx_out_dim_tensor: *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_remap_detection_tensors(
        mode: *mut NNModel,
        context: *mut NNContext,
        detection_tensors: *mut *mut NNTensor,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_set_class_filter(
        decode_out: *mut NNTensor,
        class_idx_array: *mut ::std::os::raw::c_int,
        len: ::std::os::raw::c_int,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_set_nms_type(
        decode_out: *mut NNTensor,
        nms_type_in: ::std::os::raw::c_int,
    ) -> VAALError;
}
extern "C" {
    pub fn vaal_check_model_string(idx: ::std::os::raw::c_int) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn vaal_set_detection_model_type(
        model: *mut NNModel,
        context: *mut NNContext,
        model_type_id: ::std::os::raw::c_int,
    );
}
